# AutoDITag

./: .gitignore  .travis.yml  LICENSE  Main.py  README.md  auto_di_tag.py  pyproject.toml  requirements.txt  setup.py  testout.txt
.github/workflows/: python-publish.yml  python-publish2.yml  python-test.yml
examples/: README.md  tänze.txt
tests/: test_auto_di_tag.py
